Fixed post list on IE

--- a/public_html/css/post-list.css
+++ b/public_html/css/post-list.css
@@ -7,11 +7,6 @@
 	font-size: 15px;
 }
 
-.post-list .wrapper {
-	display: inline-block;
-	margin: 0 auto;
-}
-
 .post-list .search {
 	margin-bottom: 1em;
 	text-align: left;
